force-app/main/default/objects/Past_Due_Evaluations__c/Past_Due_Evaluations__c.object-meta.xml
<CustomObject>
    <label>Past Due Evaluations</label>
    <nameField>
        <label>Past Due Evaluations Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Past Due Evaluations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>