force-app/main/default/objects/Past_Due_Evaluations__c/fields/Eval_Owner__c.field-meta.xml
<CustomField>
    <fullName>Eval_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Eval Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Past_Due_Evaluations1</relationshipName>
    <type>Lookup</type>
</CustomField>