force-app/main/default/objects/Past_Due_Evaluations__c/fields/Eval_Owner_C__c.field-meta.xml
<CustomField>
    <fullName>Eval_Owner_C__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Eval Owner C</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Past Due Evaluations</relationshipLabel>
    <relationshipName>Past_Due_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>