force-app/main/default/objects/Past_Due_Evaluations__c/fields/Evaluations_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Evaluations_Outstanding__c</fullName>
    <label>Evaluations Outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>