force-app/main/default/objects/Past_Due_Evaluations__c/fields/Over_90_Days_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Over_90_Days_Past_Due__c</fullName>
    <label>Over 90 Days Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>