force-app/main/default/objects/Past_Due_Evaluations__c/fields/Total_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Past_Due__c</fullName>
    <label>Total Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>