force-app/main/default/objects/Past_Due_Evaluations__c/fields/Write_Offs__c.field-meta.xml
<CustomField>
    <fullName>Write_Offs__c</fullName>
    <label>Write Offs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>