force-app/main/default/objects/Past_Due_Evaluations__c/fields/X60_Days__c.field-meta.xml
<CustomField>
    <fullName>X60_Days__c</fullName>
    <label>60 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>